# are

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  Makefile.am  README.org  configure.ac
src/: Makefile.am  are.c  are.el  are.h  are_pcre2.c  log.c  log.h  module.c  module.h  types.c  types.h  utils.c  utils.h
tests/: Makefile.am  are-test.el  run-emacs
utils/: gendb  qa
